fix: mostly working quiz suit to quiz
